# data-lake-etl-poc

./: .dockerignore  Dockerfile  Makefile  README.md  catalog.json  dockerize_n_deliver_ecr.sh  graph_summary.json  manifest.json  pyproject.toml
data_lake_etl_poc/: .user.yml  _profiles.yml  dbt_project.yml  dbt_runner.py  profiles.yml  requirements.txt
data_lake_etl_poc/docs/: catalog.json  manifest.json  run_results.json
data_lake_etl_poc/models/data_export/: schema.yml  standard_export.sql
data_lake_etl_poc/models/platform/: battery_results.sql  participants.sql  schema.yml
docs/: graph.gpickle
